--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -13,7 +13,7 @@ h1 {
     color: rgb(255,255,255);
 }
 main {
-    padding: 10px auto;
+    margin: 10px auto;
 }
 #parent {
     display: flex;
@@ -49,10 +49,10 @@ footer {
 a {
     color: rgb(255,255,255);
 }
-a :visited {
+a:visited {
     color: rgb(193,234,251);   
 }
-a :hover {
+a:hover {
     color: rgb(245,178,168);
 }
 @media screen and (max-width: 768px) {
